# audio-stream-google-home

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  batch_download_and_upload.py  deploy.sh  download_audio_from_yt.py  main.py  pyproject.toml  update.sh
scripts/: install-prod.sh
src/audio-stream-google-home/: main.py  telemetry.py
src/audio-stream-google-home/templates/: telemetry_dashboard.html
systemd/: audio-book.service
