[project]
name = "audio-stream-google-home"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20.0",
    "fastapi>=0.126.0",
    "pychromecast>=14.0.9",
    "python-dotenv>=1.2.1",
    "uvicorn[standard]>=0.20.0",
    "yt-dlp>=2025.12.8",
]
